adjust navigation links in site to have translation

--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
@@ -10,7 +10,7 @@
       alt="Gallery image"
     />
   </div>
-  <a class="btn btn_gallery" routerLink="/reservations">Make a reservation</a>
+  <a class="btn btn_gallery" routerLink="/reservations">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
 </div>
 
 
