--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -48,7 +48,8 @@
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
     </div>
-    <a routerLink="/reservations" class="btn btn_prices">Make a reservation</a>
+    <a routerLink="/reservations"
+       class="btn btn_prices">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
   </div>
   <div class="price-list-section">
     <h2 class="section-title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h2>
@@ -93,6 +94,7 @@
         <div class="terms">{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</div>
       </div>
     </div>
-    <a routerLink="/reservations" class="btn btn_prices">Make a reservation</a>
+    <a routerLink="/reservations"
+       class="btn btn_prices">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
   </div>
 </section>
