--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -1,10 +1,6 @@
 @import '../../../../../assets/base/global';
-@import '../../../../../assets/modules/page-section';
-@import '../../../../../assets/modules/row';
-@import '../../../../../assets/modules/wrapper';
 @import '../../../../../assets/modules/section-title';
-@import '../../../../../assets/modules/feature-item';
-@import '../../../../../assets/modules/generic-content-container';
+@import '../../../../../assets/modules/quote';
 
 
 .section-title {
@@ -117,47 +113,6 @@
   }
 }
 
-
-.quote-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 60px 20px;
-  background: #f8f8f8;
-}
-
 .quote-container {
-  max-width: 400px;
-  text-align: center;
-  animation: fadeIn 1.5s ease-in-out;
   margin: 100px auto;
-
-  @include atMedium {
-    max-height: 700px;
-  }
 }
-
-.quote-text {
-  font-size: 28px;
-  font-style: italic;
-  color: #555;
-  margin-bottom: 10px;
-}
-
-.quote-author {
-  font-size: 20px;
-  font-weight: 600;
-  color: #a33c3c;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
