adjust font-size for forms to avoid auto zoom-in effect in safari

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -111,3 +111,11 @@ button {
     cursor: not-allowed;
   }
 }
+
+@media (max-width: 768px) {
+  input,
+  textarea,
+  select {
+    font-size: 1rem;
+  }
+}
