adjust reservation and review services and add lazy loading for images

--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
@@ -5,6 +5,7 @@
     <img
       *ngFor="let img of images; let i = index"
       [src]="img"
+      loading="lazy"
       (click)="openModal(i)"
       class="thumbnail"
       alt="Gallery image"
