--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,7 +1,7 @@
 <div class="main-section">
   <div class="intro-hero">
     <div class="image-overlay"></div>
-    <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex">
+    <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex" loading="lazy">
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
@@ -16,7 +16,7 @@
       <p class="middle-hero__paragraph">{{ 'MAIN.HOME.MIDDLE_PARAGRAPH' | translate }}</p>
       <a routerLink="/about-us"
          class="btn btn_about-us">{{ 'MAIN.SHARED.NAVIGATION_LINKS.MEET_THE_INSTRUCTORS' | translate }}</a>
-      <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image">
+      <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image" loading="lazy">
     </div>
   </div>
   <div class="quote-container">
