add new news service logic and adjust styling for po requirements

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -44,6 +44,6 @@
   </div>
   <p class="footer_rights">
     <i class="fa-regular fa-copyright"></i>
-    2025 ReformFlow. All rights reserved.
+    2025 ReformFlowStudio. All rights reserved.
   </p></div>
 
