--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -1,18 +1,19 @@
 <h4 class="contacts_container__heading section-title">{{'MAIN.CONTACTS.TITLE' | translate}}</h4>
 <div class="contacts_container">
   <ul class="contacts_container__list">
-    <li><a type="phone" href="tel:+1234567890">
+    <li><a type="phone" href="tel:+359 897870010">
       <ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>
-      +359 88888888</a></li>
-    <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg">
+      +359 897870010</a></li>
+    <li><a type="mail" href="mailto:reformflowstudio@gmail.com">
       <ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>
-      {{ 'ven@abv.bg' }}</a></li>
+      {{ 'reformflowstudio@gmail.com' }}</a></li>
     <li><a
       href="https://g.co/kgs/Rp5DPvw">
       <ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>
       {{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
   </ul>
   <app-google-map></app-google-map>
+  <div action="" class="page-section">
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container">
     <h2 class="form_header">
       {{'MAIN.CONTACTS.CONTACTS_FORM.TITLE' | translate}}
@@ -69,5 +70,5 @@
       {{ 'MAIN.CONTACTS.CONTACTS_FORM.SUBMIT' | translate }}
     </button>
   </form>
-
+  </div>
 </div>
