--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
@@ -1,5 +1,6 @@
 @import '../../../../../assets/base/global';
 @import '../../../../../assets/modules/section-title';
+@import '../../../../../assets/modules/page-section';
 
 .ng_icons {
   width: 2rem;
@@ -52,13 +53,13 @@
 }
 .form-container {
   max-width: 700px;
-  margin: 0 auto 100px;
   border-radius: 10px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: grey;
 
   .form_header {
     text-align: center;
