add weight to the fonts in the forms input labes as required from po

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -4,12 +4,8 @@
 
 .section-title,
 .form_header {
-  color: grey;
-}
-
-form_header {
   text-align: center;
-  color: #333;
+  color: grey;
 }
 
 .form-container {
@@ -47,7 +43,7 @@ form_header {
   flex-direction: column;
 
   label {
-    font-weight: 500;
+    font-weight: bold;
     margin-bottom: 5px;
   }
 
