--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -172,21 +172,24 @@
 
     @include atSmall {
       margin: 0;
-      font-size: 3rem;
+      font-size: 2rem;
       margin-bottom: 10px;
+    }
+
+    @include atMedium {
+      font-size: 3rem;
     }
 
   }
 
   &__paragraph {
     color: #383b38;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 100;
 
 
     @include atSmall {
       margin: 0;
-      font-size: 1.4rem;
       margin-left: auto;
       margin-right: auto;
       max-width: 540px;
@@ -223,6 +226,11 @@
 
 .faq_heading {
   margin-top: 100px;
+  font-size: 35px;
+
+  @include atMedium {
+    font-size: 3.55rem;
+  }
 }
 
 /* Container for FAQ section */
@@ -247,12 +255,16 @@
 
 /* Styling for the question text */
 .question {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 500;
   color: grey;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include atMedium {
+    font-size: 25px;
+  }
 }
 
 /* Styling for arrow indicator */
@@ -315,7 +327,11 @@
 .answer {
   padding: 10px;
   color: #333;
-  font-size: 1.25rem;
+  font-size: 0.975rem;
+
+  @include atMedium {
+    font-size: 1.25rem;
+  }
 }
 
 .gma-heading {
