--- a/src/assets/modules/_section-title.scss
+++ b/src/assets/modules/_section-title.scss
@@ -1,10 +1,10 @@
 .section-title {
-  font-size: 2.55rem;
+  font-size: 2rem;
   font-weight: 300;
   text-align: center;
 
-  @include atSmall {
-    font-size: 3.75rem;
+  @include atMedium {
+    font-size: 3.4rem;
   }
 
   &__icon {
