--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -2,11 +2,11 @@
   <h1 class="section-title about-us_heading">{{ 'MAIN.ABOUT_US.MAIN-TITLE' | translate }}</h1>
   <h2 class="about-us_trainers-heading">{{ 'MAIN.ABOUT_US.TITLE' | translate }}</h2>
   <div class="about-us_container">
-    <div class="about-us_card" *ngFor="let card of aboutUsCardsList">
-      <img [src]="card.image" [alt]="card.title" class="about-us_image">
+    <div class="instructor-card" *ngFor="let card of aboutUsCardsList">
+      <img [src]="card.image" [alt]="card.title" class="instructor-image">
       <div class="about-us_description">
-        <h3 class="about-us_card__heading">{{ card.title }}</h3>
-        <p class="about-us_card__description scroll-container">{{ card.description }}</p>
+        <h3 class="instructor-name">{{ card.title }}</h3>
+        <p class="instructor-description scroll-container">{{ card.description }}</p>
       </div>
     </div>
   </div>
