add load spinner animation to contacts and reservations and add a module for the modal popup

--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../../assets/base/global';
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/page-section';
+@import '../../../../../assets/modules/modal';
 
 .ng_icons {
   width: 2rem;
