--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../assets/base/global';
+@import '../../../../../assets/modules/modal';
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/generic-content-container';
 
@@ -116,3 +117,4 @@ button {
     font-size: 1rem;
   }
 }
+
