--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -9,7 +9,7 @@
 }
 
 #pilates-prices {
-  padding: 2.5rem 0;
+  padding-bottom: 2.5rem;
 }
 
 .container {
@@ -53,7 +53,7 @@
 
 .price-item {
   display: grid;
-  grid-template-columns: 2fr 1fr 1.3fr;
+  grid-template-columns: 2fr 1.4fr 1.3fr;
   padding: 1.25rem 1.5rem; // 20px 24px
   font-weight: initial;
   color: grey;
