--- a/src/assets/modules/_quote.scss
+++ b/src/assets/modules/_quote.scss
@@ -12,10 +12,14 @@
 }
 
 .quote-text {
-  font-size: 28px;
+  font-size: 20px;
   font-style: italic;
   color: #555;
   margin-bottom: 10px;
+
+  @include atMedium {
+    font-size: 28px;
+  }
 }
 
 .quote-author {
