adjust confirmation message for reservations and contacts/reviews

--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -83,7 +83,7 @@
         <p class="modal-message">
           {{
             modalSuccess
-              ? ('MAIN.SHARED.ERRORS.MODAL.SUCCESS_DESCRIPTION' | translate)
+              ? ('MAIN.SHARED.ERRORS.MODAL.SUCCESS_REVIEW' | translate)
               : ('MAIN.SHARED.ERRORS.MODAL.FAILURE_DESCRIPTION' | translate)
           }}
         </p>
