--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -86,7 +86,7 @@
     <p class="modal-message">
       {{
         modalSuccess
-          ? ('MAIN.SHARED.ERRORS.MODAL.SUCCESS_REVIEW' | translate)
+          ? ('MAIN.SHARED.ERRORS.MODAL.SUCCESS_DESCRIPTION' | translate)
           : ('MAIN.SHARED.ERRORS.MODAL.FAILURE_DESCRIPTION' | translate)
       }}
     </p>
