--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -351,7 +351,7 @@
 
 .testimonials-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 2rem;
   padding: 2rem;
@@ -398,10 +398,17 @@
   .content {
     padding: 1.5rem;
 
+    .info {
+      font-style: italic;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
     .message {
       font-style: italic;
       font-size: 1rem;
       margin-bottom: 1rem;
+      margin-top: 0;
     }
 
     .name {
