add heading for the testimonials and adjust styling

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -349,6 +349,10 @@
   background: #f8f8f8;
 }
 
+.testimonials-heading {
+  margin-bottom: 50px;
+}
+
 .testimonials-container {
   display: flex;
   justify-content: space-evenly;
