--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -5,8 +5,8 @@
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
-      <p class="intro-hero__paragraph">{{'MAIN.HOME.PARAGRAPH.PART_1' | translate }}
-        {{'MAIN.HOME.PARAGRAPH.PART_2' | translate }}</p>
+      <p class="intro-hero__paragraph">{{ 'MAIN.HOME.PARAGRAPH.PART_1' | translate }}
+        {{ 'MAIN.HOME.PARAGRAPH.PART_2' | translate }}</p>
       <a class="btn" (click)="navigateToContacts()">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
     </div>
   </div>
@@ -16,7 +16,8 @@
       <p class="middle-hero__paragraph">{{ 'MAIN.HOME.MIDDLE_PARAGRAPH' | translate }}</p>
       <a routerLink="/about-us"
          class="btn btn_about-us">{{ 'MAIN.SHARED.NAVIGATION_LINKS.MEET_THE_INSTRUCTORS' | translate }}</a>
-      <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image" loading="lazy">
+      <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image"
+           loading="lazy">
     </div>
   </div>
   <div class="quote-container">
@@ -37,17 +38,18 @@
   </div>
   <h2 class="section-title gma-heading">{{ 'MAIN.HOME.GM_HEADING' | translate }}</h2>
   <app-google-map></app-google-map>
-  <div class="testimonials-container">
-    <div class="testimonial-card" *ngFor="let t of testimonials">
-      <div class="image-wrapper">
-        <img [src]="t.image" [alt]="t.name" />
-      </div>
-      <div class="content">
-        <p class="message">"{{ t.info[lang] }}"</p>
-        <p class="name">{{ t.name[lang] }}</p>
-        <p class="role">{{ t.role[lang] }}</p>
-        <p class="message">{{t.message[lang]}}</p>
+  <h3 class="testimonials-heading section-title">{{ 'MAIN.HOME.TESTIMONIALS_TITLE' | translate }}</h3>
+    <div class="testimonials-container">
+      <div class="testimonial-card" *ngFor="let t of testimonials">
+        <div class="image-wrapper">
+          <img [src]="t.image" [alt]="t.name"/>
+        </div>
+        <div class="content">
+          <p class="message">"{{ t.info[lang] }}"</p>
+          <p class="name">{{ t.name[lang] }}</p>
+          <p class="role">{{ t.role[lang] }}</p>
+          <p class="message">{{ t.message[lang] }}</p>
+        </div>
       </div>
     </div>
-  </div>
 </div>
