--- a/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
@@ -20,8 +20,7 @@
   &__image {
     display: block;
     border-radius: 10px;
-
-    width: fit-content;
+    width: 700px;
     margin-left: auto;
     margin-right: auto;
   }
