add a new article for the news section and add additional line to the ordereditems array structure

--- a/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.html
+++ b/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.html
@@ -24,6 +24,9 @@
         @if (item.line2) {
           <p>{{ item.line2[lang] }}</p>
         }
+        @if (item.line3) {
+          <p>{{ item.line3[lang] }}</p>
+        }
       }
     </ol>
   }
