--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -93,41 +93,4 @@
     <button class="modal-close" (click)="showModal = false">{{ 'MAIN.SHARED.ERRORS.MODAL.BUTTON' | translate }}</button>
   </div>
 </div>
-
-<div class="working-hours-section">
-  <h2 class="section-title">{{'MAIN.RESERVATIONS.SCHEDULE.TITLE' | translate}}</h2>
-  <div class="working-hours-list">
-    <div class="working-item header">
-      <div class="days">{{'MAIN.RESERVATIONS.SCHEDULE.DAYS.TITLE' |translate}}</div>
-      <div class="time">{{'MAIN.RESERVATIONS.SCHEDULE.DAYS.TIME' | translate}}</div>
-    </div>
-
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.MONDAY' | translate }}</div>
-      <div class="time">08:00-19:00</div>
-    </div>
-
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.TUESDAY' | translate }}</div>
-      <div class="time">08:00-19:00</div>
-    </div>
-
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.WEDNESDAY' | translate }}</div>
-      <div class="time">08:00-19:00</div>
-    </div>
-
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.THURSDAY' | translate }}</div>
-      <div class="time">08:00-19:00</div>
-    </div>
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.FRIDAY' | translate }}</div>
-      <div class="time">08:00-19:00</div>
-    </div>
-    <div class="working-item">
-      <div class="days">{{ 'MAIN.RESERVATIONS.SCHEDULE.DAYS.SAT_SUN' | translate }}</div>
-      <div class="time">10:00-16:00</div>
-    </div>
-  </div>
-</div>
+<app-working-hours></app-working-hours>
