add transiiton button for reservations and adjust styling of transition button

--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -10,4 +10,6 @@
       </div>
     </div>
   </div>
+  <a routerLink="/reservations"
+     class="btn btn_spacing">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
 </section>
