--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -4,6 +4,7 @@
 
 .section-title{
   color: grey;
+  padding: 0 20px;
 }
 
 .section-description {
@@ -11,6 +12,7 @@
   text-align: center;
   font-size: 1.25rem;
   margin-bottom: 2.5rem;
+  padding: 0 20px;
 }
 
 .gallery_container {
@@ -100,5 +102,5 @@
 }
 
 .btn_gallery {
-  margin: 100px auto;
+  margin: 50px auto;
 }
