--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -110,6 +110,15 @@ button {
   }
 }
 
+select {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   input,
   textarea,
