adjust top margin for small devices for about us and control anchor text for e-mail width

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -26,7 +26,7 @@
           +359 897870010</a></li>
         <li><a type="mail" href="mailto:reformflowstudio@gmail.com">
           <ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>
-          {{ 'reformflowstudio' }}</a></li>
+          {{ 'reformflowstudio@gmail.com' }}</a></li>
         <li><a
           href="https://g.co/kgs/Rp5DPvw">
           <ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>
