--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -17,7 +17,7 @@ $section-spacing: 0.9375rem; // 15px
   flex: 1 1 auto;
   color: ivory;
   font-size: 1.125rem;
-  padding: 2.5rem 10%;
+  padding: 1.25rem 10% 2.5rem 10%;
 
   @include atMedium {
     flex-direction: row;
@@ -56,6 +56,7 @@ $section-spacing: 0.9375rem; // 15px
   align-items: flex-start;
   margin-top: $section-gap;
 
+
   @include atMedium {
     width: $section-width;
     text-align: left;
@@ -65,6 +66,7 @@ $section-spacing: 0.9375rem; // 15px
 // ==== About Us Section ====
 .about-us_container {
   @extend .footer-column;
+  margin-top: 0;
 
   &__description {
     margin-top: 0;
@@ -72,6 +74,10 @@ $section-spacing: 0.9375rem; // 15px
     @include atMedium {
       padding: 0;
     }
+  }
+
+  @include atMedium {
+    margin-top: $section-gap;
   }
 }
 
@@ -101,6 +107,8 @@ $section-spacing: 0.9375rem; // 15px
 // ==== Contacts Section ====
 .contacts_container {
   @extend .footer-column;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &__list {
     list-style: none;
@@ -108,13 +116,15 @@ $section-spacing: 0.9375rem; // 15px
     padding: 0;
 
     li {
+      display: flex;
+      align-items: center;
+      list-style: none;
       margin-bottom: $section-spacing;
 
       a {
         display: flex;
         align-items: center;
         text-decoration: none;
-        white-space: pre-line;
       }
     }
   }
